apps/app-proxy/overlays/dmaizel-staging-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: dmaizel-staging-test-cap-app-proxy
  namespace: dmaizel-staging-test
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
